# bitmask-vpn

./: .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yaml  AUTHORS  CHANGELOG  CMakeLists.txt  Makefile  README.md  autostart.go  bitmask.pro  bitmask_go.go  bitmaskd.go  build.sh  catalog.go  code-of-conduct.txt  config.go  go.mod  go.sum  main.go  notificator.go  pid.go  pid_test.go  release-notes.txt  signal_unix.go  signal_windows.go  standalone.go  systray.go  test.pro  vendor.json
.github/workflows/: nightly.yaml
.reuse/: dep5
.tx/: config
ArchLinux/: PKGBUILD
bitmask/: bitmask.go  darwin.go  events.go  main.go  unix.go  vpn.go  windows.go
bitmask_go/: bonafide.go  bonafide_test.go  launcher_linux.go  launcher_windows.go  main.go  status.go  vpn.go
bitmaskd/: events.go  main.go  vpn.go
branding/: README.rst  README.txt  check-ca-crt.py  vendorize.py
branding/assets/: default
branding/config/: calyx-ca.crt  demo-ca.crt  demolib-ca.crt  vendor.conf
branding/installer/: post-install.py
branding/motd-cli/: .gitignore  README.md  main.go  motd-example.json  motd.json  motd_test.go
branding/scripts/: ASSETS_LIST  ASSETS_REQUIRED  TODO  build-all-providers  check  check-ca-crt  check-ca-crt.py  gen-providers-json  gen-providers-json.py  gen-qtinstaller  generate-debian  generate-debian.py  generate-osx.py  generate-snap  generate-snap.py  generate-vendor-make  generate-vendor-make.py  generate-win.py  getparam  init  osx-staple-status.py  osx-staple-uuid.py  osx-stapler.sh  provider.py  vendorize.py
branding/template/: config.go
cmd/bitmask-connect/: main.go
cmd/bitmask-helper/: main.go
cmd/bitmask-vpn/: catalog.go  main.go
cmd/bitmaskd/: main.go
cmd/snowflake-client/: .gitignore  main.go
debian/: .gitignore  README  README.Debian  README.source  changelog  control  copyright  rules
debian/source/: options
docker/: .gitignore  0001-build-fix-build-on-ubuntu-23.04-with-qt6.4.patch  Dockerfile  Makefile  README.md  builder.sh
docs/: branding.rst  build-osx.rst  build-ppa.md  build-ppa.rst  build-snap-canonical.rst  build-static.rst  build-win.rst  build.osx.rst  build.windows.rst  circumvention.rst  conf.py  contribution-ideas.md  cross-compiling-with-mxe.rst  debug.rst  discrete-ideas.md  firewall.rst  hacking-qml.rst  headless.md  i18n-howto.rst  index.rst  linux-build-VMs.rst  release-howto.md  release-howto.rst  snap-release.rst  style-guide.md  test-float.rst  uninstall.md
docs/design/: gateway-selection.rst
docs/dev/: good-practices.md
docs/research/: snowflake.txt
gui/: api.md  appsettings.h  backend.go  build.sh  gui.qrc  handlers.cpp  handlers.h  main.cpp  main.qml  qjsonmodel.cpp  qjsonmodel.h  qtquickcontrols2.conf
gui/components/: About.qml  BoldLabel.qml  ConfiguringProvider.qml  ErrorBox.qml  FadeBehavior.qml  Footer.qml  Header.qml  Help.qml  Home.qml  Icon.qml  InitErrors.qml  LightLabel.qml  Locations.qml  MainView.qml  MaterialButton.qml  MaterialCheckBox.qml  MaterialRadioButton.qml  MaterialRadioIndicator.qml  MotdBox.qml  NavigationDrawer.qml  Preferences.qml  ProviderSelection.qml  ProviderSetupComplete.qml  SelectCircumventionTechnique.qml  SignalIcon.qml  Spinner.qml  Splash.qml  StatusBox.qml  Style.qml  SwitchProvider.qml  Systray.qml  ThemedPage.qml  VPNButtonBase.qml  VPNMouseArea.qml  VPNState.qml  VPNToggle.qml  VerticalSpacer.qml  WrappedRadioButton.qml
gui/i18n/: base.ts  main_ar.ts  main_de.ts  main_el.ts  main_es-cu.ts  main_es-rAR.ts  main_es.ts  main_es_AR.ts  main_es_CU.ts  main_es_ES.ts  main_et.ts  main_fa.ts  main_fa_IR.ts  main_fi.ts  main_fr.ts  main_hu.ts  main_it.ts  main_lt.ts  main_nl.ts  main_pl.ts  main_pt-rBR.ts  main_pt_BR.ts  main_ru.ts  main_th.ts  main_tr.ts  main_ug.ts  main_uk.ts  main_zh-rTW.ts  main_zh.ts  main_zh_TW.ts
gui/js/: maps.js
gui/providers/: providers.json
gui/qml/: AboutDialog.qml  BackgroundImage.qml  BridgesItem.qml  DonateDialog.qml  FailDialog.qml  LocationText.qml  LoginConfirmation.qml  LoginDialog.qml  LoginOKDialog.qml  MainBar.qml  VPNSwitch.qml  VpnState.qml  logic.js  main.qml  readme.txt
gui/themes/: Bitmask.qml  Calyx.qml  Riseup.qml  ThemeObject.qml  theme-calyx.js  theme-riseup.js  themes.js
helpers/: README.txt  bitmask-root  se.leap.bitmask.policy  se.leap.bitmask.snap.policy
icon/: 18_blocked_unix.go  18_off_unix.go  18_on_unix.go  18_wait_0_unix.go  18_wait_1_unix.go  18_wait_2_unix.go  18_wait_3_unix.go  Makefile  blocked_darwin.go  blocked_unix.go  blocked_win.go  error_unix.go  make_icon.bat  off_darwin.go  off_unix.go  off_win.go  on_darwin.go  on_unix.go  on_win.go  wait0_unix.go  wait1_unix.go  wait2_unix.go  wait3_unix.go  wait_0_darwin.go  wait_0_unix.go  wait_0_win.go  wait_1_darwin.go  wait_1_unix.go  wait_1_win.go  wait_2_darwin.go  wait_2_unix.go  wait_2_win.go  wait_3_darwin.go  wait_3_unix.go  wait_3_win.go  wait_unix.go
installer/: .gitignore  bitmask-installer.pro
installer/config/: config.xml
locales/ar/: messages.gotext.json
locales/bn/: messages.gotext.json
locales/br/: messages.gotext.json
locales/ca/: messages.gotext.json
locales/de/: messages.gotext.json
locales/el/: messages.gotext.json
locales/en/: messages.gotext.json
locales/en-GB/: messages.gotext.json
locales/en-US/: messages.gotext.json
locales/es/: messages.gotext.json
locales/es-ES/: messages.gotext.json
locales/eu/: messages.gotext.json
locales/fa-IR/: messages.gotext.json
locales/fr/: messages.gotext.json
locales/he/: messages.gotext.json
locales/hu/: messages.gotext.json
locales/it/: messages.gotext.json
locales/lt/: messages.gotext.json
locales/nl/: messages.gotext.json
locales/pl/: messages.gotext.json
locales/pt-BR/: messages.gotext.json
pkg/: version
pkg/backend/: README.md  api.go  (+12 more)
providers/: vendor.conf  vendor.qrc
scripts/: test_qt_version.sh
standalone/: bonafide.go  bonafide_integration_test.go  bonafide_test.go  launcher.go  launcher_linux.go  main.go  vpn.go
tests/: .gitignore  providers.json  test_ui.cpp  tests.qrc  tst_smoke.qml
transifex/: Makefile  main.go  messages.json
(+215 files in other folders)
